# moviehouse

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  install.sh  pre-deploy.sh
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AddTorrent.tsx  BottomNav.tsx  ConfirmDialog.tsx  DownloadList.tsx  EpisodeRow.tsx  FfmpegBanner.tsx  FolderPicker.tsx  LibraryView.tsx  Logo.tsx  MediaCard.tsx  SettingsPanel.tsx  ShowCard.tsx  Sidebar.tsx  SpeedGraph.tsx  TranscodeOptions.tsx  VideoPlayer.tsx
frontend/src/components/media/: MediaCardActions.tsx  MediaCardInfo.tsx  MediaCardPoster.tsx
frontend/src/components/settings/: DownloadSettings.tsx  SystemInfo.tsx  TranscodeSettings.tsx
frontend/src/components/ui/: label.tsx
frontend/src/contexts/: SettingsContext.tsx
frontend/src/hooks/: useLibraryGroups.ts  useTheme.ts  useWebSocket.ts
frontend/src/lib/: formatters.ts  media-helpers.ts
src/: cli.rs  error.rs  main.rs  tmdb.rs
src/bencode/: decode.rs  encode.rs  mod.rs  value.rs
src/dht/: krpc.rs  lookup.rs  mod.rs  node.rs  routing_table.rs  token.rs
src/disk/: io.rs  mapping.rs  mod.rs
src/engine/: choker.rs  library.rs  magnet.rs  magnet_buffer.rs  manager.rs  mod.rs  session.rs  store.rs  types.rs
src/peer/: codec.rs  connection.rs  extension.rs  handshake.rs  manager.rs  message.rs  mod.rs
src/piece/: bitfield.rs  mod.rs  picker.rs  store.rs
src/torrent/: magnet.rs  metainfo.rs  mod.rs  types.rs
src/tracker/: http.rs  manager.rs  mod.rs  udp.rs
src/transcode/: chunked.rs  ffmpeg.rs  job.rs  mod.rs  presets.rs  probe.rs  runner.rs
src/ui/: progress.rs
src/web/: api.rs  mod.rs  server.rs  ws.rs
src/web/api/: filesystem.rs  library.rs  media.rs  mod.rs  settings.rs  torrents.rs  transcode.rs
